# Thumb_Pipeline

./: .gitignore  CLAUDE.md  README.md  SETUP_GOOGLE_CLOUD.md  backend_server.spec  backend_server_entry.py  build_release.bat  package-lock.json  package.json  test_output.txt
.claude/skills/gitnexus/gitnexus-debugging/: SKILL.md
backend/: __init__.py  auth.py  main.py  models.py  profiles.py  requirements.txt
backend/jobs/: __init__.py  routers.py  runner.py  state.py  store.py
backend/pipeline/: __init__.py  config.py  credentials.py  drive.py  ffmpeg.py  runner.py  sheets.py
backend/tests/: test_pipeline_row_slots.py
frontend/: index.html
frontend/src/: account.js  api.js  dedup.js  dom.js  jobs.js  log.js  main.js  open-sheet.js  polling.js  profiles.js  resizer.js  state.js  styles.css  tabs.js  utils.js
frontend/tests/: jobs-active-tab-race.test.mjs  polling-tab-refresh.test.mjs  profiles-add-account-flow.test.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
