[package]
name = "thumb-pipeline-desktop"
version = "0.1.0"
description = "Tauri desktop app with HTML/CSS frontend and Python backend"
authors = ["Thumb Pipeline"]
edition = "2021"

[lib]
name = "thumb_pipeline_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
